Mon Oct 27 21:39:29 2003                        Michael Jennings (mej)

Changed -D/--desktop option to use EWMH-compliant desktop atom.

Add support for EWMH icon property.
----------------------------------------------------------------------
Fri Nov  7 12:26:11 2003                        Michael Jennings (mej)

Fixed stupid mathematical blunder in the font handling code pointed
out by Laurence J. Lane <ljlane@debian.org>.

Allow save_buff() script function to dump to stderr if no file is
specified.  Note that script functions CANNOT be triggered by escape
sequences.
----------------------------------------------------------------------
Fri Nov 28 09:04:49 2003                        Michael Jennings (mej)

Changes for compatibility with newer LibAST.
----------------------------------------------------------------------
Tue Dec  9 22:26:17 2003                        Michael Jennings (mej)

Add libast libs to GRLIBS.

Hopefully fixed Etbg_update_list to be Solaris /bin/sh-friendly.
----------------------------------------------------------------------
Sun Dec 21 21:43:58 2003                        Michael Jennings (mej)

Fix :hscale and :vscale to work properly.
----------------------------------------------------------------------
Mon Dec 22 13:39:02 2003                        Michael Jennings (mej)

These two are going away.
----------------------------------------------------------------------
Mon Dec 22 15:40:43 2003                        Michael Jennings (mej)

That too.
----------------------------------------------------------------------
Mon Dec 22 15:50:35 2003                        Michael Jennings (mej)

Minor tweaks to utils/Etbg_update_list.
----------------------------------------------------------------------
Mon Dec 22 15:56:51 2003                        Michael Jennings (mej)

Backported changes to menu generation.
----------------------------------------------------------------------